@@ -1,4 +1,4 @@
-/* $Id: pkgindb_queries.c,v 1.7 2011/08/30 11:52:17 imilh Exp $ */
+/* $Id: pkgindb_queries.c,v 1.8 2011/08/31 12:01:27 imilh Exp $ */
 
 /*
  * Copyright (c) 2009, 2010 The NetBSD Foundation, Inc.
@@ -115,12 +115,12 @@ const char UNKEEP_PKG[] =
 const char LOCAL_PKGS_QUERY[] =
     "SELECT FULLPKGNAME,PKGNAME,PKGVERS,COMMENT,FILE_SIZE,SIZE_PKG "
 	"FROM LOCAL_PKG "
-    "ORDER BY PKGNAME DESC;";
+    "ORDER BY PKGNAME ASC;";
 
 const char REMOTE_PKGS_QUERY[] =
     "SELECT FULLPKGNAME,PKGNAME,PKGVERS,COMMENT,FILE_SIZE,SIZE_PKG "
 	"FROM REMOTE_PKG "
-    "ORDER BY PKGNAME DESC;";
+    "ORDER BY PKGNAME ASC;";
 
 const char NOKEEP_LOCAL_PKGS[] =
     "SELECT FULLPKGNAME,PKGNAME FROM LOCAL_PKG WHERE PKG_KEEP IS NULL;";
