@@ -1,6 +1,11 @@
+20110831
+	Globs can now be passed as an argument for package installation, i.e.
+	# pkgin in 'mysql<5.5'
+
 20110830
 	Export / import a list of packages as requested by wiz@
 	Operations tracing flag (-t)
+
 20110828
 	Database silent migration
 	More flexible check_yesno()
